--- a/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/elasticitySpace.html
+++ b/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/elasticitySpace.html
@@ -33,7 +33,7 @@
 </style>
 <body>
     <script src="http://d3js.org/d3.v3.js"></script>
-    <script src="./spin.js" type="text/javascript"></script>
+    <script src="scripts/spin.js" type="text/javascript"></script>
     <div id="loadingIcon"></div>
     <script>
 
@@ -503,7 +503,7 @@
             }
 
             elasticitySpaceRequest.onreadystatechange = processElasticitySpaceRequestResponse;
-            elasticitySpaceRequest.open("POST", "./REST_WS/" + vars[0] + "/elasticityspace", true);
+            elasticitySpaceRequest.open("POST", "./REST_WS/" + vars[0] + "/elasticityspace/json", true);
             elasticitySpaceRequest.setRequestHeader('Content-type', 'application/xml');
             elasticitySpaceRequest.send("<MonitoredElement id=\"" + vars[1] + "\" level=\"" + vars[2] + "\"/>");
 
