--- a/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/index.html
+++ b/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/index.html
@@ -32,7 +32,7 @@
 
 </style>
 <body>
-    <script src="./spin.js" type="text/javascript"></script>
+    <script src="scripts/spin.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://d3js.org/d3.v3.js"></script>
     <script type="text/javascript" language="Javascript" 
             src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js">
