Added home button link

--- a/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/mela.html
+++ b/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/mela.html
@@ -41,6 +41,7 @@
         </style>
     </head>
     <body>
+        <div id="back"><a href="./index.html"><img src="home.png" alt="&lt &lt Home"/></a></div>
         <div id="A"></div>
         <div id="chart"></div>
         <div id="mydialog">Please select information to display
