Fixed colors in el space chart

--- a/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/elasticitySpace.html
+++ b/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/elasticitySpace.html
@@ -474,7 +474,7 @@
 
         }
 
-        var elSpaceColors = ["72B095", "D13F31", "D13F31"];
+        var elSpaceColors = ["#72B095", "#D13F31", "#D13F31"];
         var elPathwayColors = ["#1C4946", "#1F7872", "#72B095", "#DEDBA7", "#D13F31", "#8C9C9A", "#9DB2B1"];
         //       
         var lineThickness = new Array("3px", "3px", "3px");
