--- a/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/elasticitySpace.html
+++ b/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/elasticitySpace.html
@@ -530,31 +530,33 @@
 
         function drawElSpace(elSpace, vars) {
 
-            elSpaceDiv.selectAll("h2").remove();
-            elSpaceDiv.selectAll("svg").remove();
+            if (elSpace && elSpace.dimensions) {
 
-            elSpaceDiv.append("h2").text("Elasticity Space  for " + vars[1]);
+                elSpaceDiv.selectAll("h2").remove();
+                elSpaceDiv.selectAll("svg").remove();
 
-            maxColumns = Math.floor(window.innerWidth / (width + 60));
+                elSpaceDiv.append("h2").text("Elasticity Space  for " + vars[1]);
 
-            elSpaceSVGHeight = Math.ceil(elSpace.dimensions.length / maxColumns) * (height + 120);
+                maxColumns = Math.floor(window.innerWidth / (width + 60));
 
-            elSpaceSVG = elSpaceDiv.append("svg")
-                    .attr("width", window.innerWidth)
-                    .attr("height", elSpaceSVGHeight)
-                    .append("g")
-                    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+                elSpaceSVGHeight = Math.ceil(elSpace.dimensions.length / maxColumns) * (height + 120);
 
-            elSpaceSVG.append("line")
-                    .attr("x1", -margin.left)
-                    .attr("y1", -20)
-                    .attr("x2", window.innerWidth)
-                    .attr("y2", -20)
-                    .attr("stroke-width", 1)
-                    .attr("stroke", "black");
+                elSpaceSVG = elSpaceDiv.append("svg")
+                        .attr("width", window.innerWidth)
+                        .attr("height", elSpaceSVGHeight)
+                        .append("g")
+                        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-            generateElSpaceChart(elSpace, elSpaceSVG, lineThickness, elSpaceColors, -50, 20, width, height, "Time (s)");
+                elSpaceSVG.append("line")
+                        .attr("x1", -margin.left)
+                        .attr("y1", -20)
+                        .attr("x2", window.innerWidth)
+                        .attr("y2", -20)
+                        .attr("stroke-width", 1)
+                        .attr("stroke", "black");
 
+                generateElSpaceChart(elSpace, elSpaceSVG, lineThickness, elSpaceColors, -50, 20, width, height, "Time (s)");
+            }
         }
 
 
