--- a/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/index.html
+++ b/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/index.html
@@ -30,21 +30,62 @@
         left:50%;
     }
 
+    #nav ul {
+        list-style: none;
+        margin: 0;
+    }
+
+    #nav li{
+        font-family: 'Helvetica', Arial, Verdana, sans serif;
+    }
+
+    #nav li a:link, #nav li a:visited {
+        background: url(./images/nav1.png) no-repeat;
+        background-size: 100% auto;
+        font-size: 15px;
+        display: block;
+        padding: 7% 0px 7% 20%;
+        color: #43433e;
+        text-decoration: none;
+    }
+
+    #nav li a:hover, #nav li a:focus {
+        background: url(./images/nav2.png) no-repeat;
+        background-size: 100% auto;
+        color: #000;
+        padding: 7% 7% 7% 20%;
+        margin-top:-10px;
+    }
+
+    #nav{
+        width: 270px;
+
+    }
+
 </style>
 <body>
-    <script src="scripts/spin.js" type="text/javascript"></script>
+    <script src="./scripts/spin.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://d3js.org/d3.v3.js"></script>
     <script type="text/javascript" language="Javascript" 
             src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js">
     </script>
 
-    <div id="loadingIcon"></div>
-    <div id="services">
-        Currently Managed Services:
-        <ul id="nav">
-        </ul>
+    <h2>Currently managed elastic services:</h2> 
 
-    </div>
+    <div id="loadingIcon"></div>
+    <header>
+
+        <aside id="navibar">
+
+            <div id="nav">
+                <ul id="services">
+
+                </ul>
+
+            </div>
+        </aside>
+    </header>
+
     <script>
 
         var opts = {
@@ -67,7 +108,7 @@
         };
 
         var loadingSpinner = new Spinner(opts);
-        var idsList = document.getElementById("nav");
+        var idsList = document.getElementById("services");
         function refreshServicesList() {
 
             getManagedServices = null;
